--- a/WishList/WishList/wwwroot/index.html
+++ b/WishList/WishList/wwwroot/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link rel="stylesheet" href="index.html" />
+    <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </head>
 <body>
+
 
 </body>
 </html>
