--- a/WishList/WishList/wwwroot/index.html
+++ b/WishList/WishList/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <link rel="stylesheet" href="index.html" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -14,5 +14,7 @@
             <input type="checkbox">
         </div>
     </div>
+
+    <script src="./script/main.js" type="module"></script>
 </body>
 </html>
